WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309959
[Site Isolation] Fix ProcessSwap.DelayedProcessLaunchDisabled
https://bugs.webkit.org/show_bug.cgi?id=309959
Summary
[Site Isolation] Fix ProcessSwap.DelayedProcessLaunchDisabled
Sihui Liu
Reported
2026-03-14 10:13:35 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-14 10:16:40 PDT
<
rdar://problem/172562912
>
Sihui Liu
Comment 2
2026-03-14 10:27:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60633
EWS
Comment 3
2026-03-16 11:26:10 PDT
Committed
309338@main
(418d2cb93934): <
https://commits.webkit.org/309338@main
> Reviewed commits have been landed. Closing PR #60633 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug