[Site Isolation] Fix ProcessSwap.DelayedProcessLaunchDisabled https://bugs.webkit.org/show_bug.cgi?id=309959 rdar://172562912

Reviewed by Per Arne Vollan.

We used to unconditionally delay launching first web process under Site Isolation as it did not work well in WKWebView
initialization (see commit message of 282394@main). Now we are able to reuse uncommitted process for loading 309232@main
and we should be able to re-enable it.

* Source/WebKit/UIProcess/API/APIPageConfiguration.cpp:
(API::PageConfiguration::delaysWebProcessLaunchUntilFirstLoad const):

Canonical link: https://commits.webkit.org/309338@main